gap fix for 1023 and less resolition

--- a/blocks/place/__description/place__description.css
+++ b/blocks/place/__description/place__description.css
@@ -12,6 +12,7 @@
 @media screen and (max-width:1023px) {
   .place__description {
     font-size: 16px;
+    row-gap: 25px;
   }
 }
 
